some fixes to contacts.js, also decreased the z-index of the sidebar to 199

--- a/css_styles/addContactForm_style.css
+++ b/css_styles/addContactForm_style.css
@@ -51,6 +51,7 @@
     position: relative;
     top: 0;
     right: 0%;
+    z-index: 200;
 }
 
 .add-heading {
