--- a/css_styles/sidebar_style.css
+++ b/css_styles/sidebar_style.css
@@ -5,7 +5,7 @@
     height: 100vh;
     width: 20%;
     position: relative;
-    z-index: 999;
+    z-index: 199;
 }
 
 .sidebar-section {
